move header/nav to components
Co-authored-by: Mike <mvondrak@gmail.com>

--- a/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.html
+++ b/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.html
@@ -1,1 +1,6 @@
-<a routerLink="/home" fragment="pageTop">&#9664; Home</a>
+<!-- <a routerLink="/home" fragment="pageTop">&#9664; Home</a> -->
+<ul *ngFor="let link of navItems">
+  <li>
+    <a [routerLink]="link.url"  [routerLinkActive]="'current-page'">{{ link.title }}</a>
+  </li>
+</ul>
