--- a/packages/public-client/src/app/components/pages/_parts/site-header/site-header.component.html
+++ b/packages/public-client/src/app/components/pages/_parts/site-header/site-header.component.html
@@ -1,5 +1,7 @@
 <header>
-  <app-site-nav></app-site-nav>
-  <img [ngClass]="{'showLogo': showLogo}" src="../../../../assets/images/logoLg_construction.png">
+  <div class="logo-container">
+    <img [ngClass]="{'showLogo': showLogo}" src="../../../../assets/images/logoLg.png">
+  </div>
+  <app-site-nav [navItems]="navItems"></app-site-nav>
   <!-- <div class="boat-cam"><span>boat cam</span></div> -->
 </header>
