--- a/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.scss
+++ b/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.scss
@@ -1,18 +1,43 @@
 @use 'sass:math';
 @use '../../../scss/utility';
 
+$headerColor: utility.$dive-gray-dk3;
+$verticalGap: 0.75rem;
+
 :host {
-  width: 100%;
-  margin-bottom: 5vw;
-  padding: 0.7vw;
-  font-size: 1.2vw;
-  font-family: 'Righteous', cursive;
-  @include utility.media-breakpoint-gte(sm) {
-    margin-bottom: 2vw;
-  }
+  // width: 100%;
+  // margin-bottom: 5vw;
+  // padding: 0.7vw;
+  // @include utility.media-breakpoint-gte(sm) {
+  //   margin-bottom: 2vw;
+  // }
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   background-color: utility.$dive-gray-dk3;
+
+  font-size: 1.25vw;
+  background-color: $headerColor; //rgba(0,0,0,0.75);
+  color: utility.$dive-white;
+  font-family: 'Righteous', cursive;
+
+  ul {
+    display: flex;
+    justify-content: center;
+    gap: 1vw;
+    padding: 0.25vw 0;
+    margin: 0;
+    list-style-type: none;
+
+    li {
+      padding: 0.5vw 1vw;
+
+      a {
+        &.current-page {
+          color: utility.$dive-gray-md;
+        }
+      }
+    }
+  }
 }
