--- a/packages/public-client/src/app/components/pages/_parts/site-page/site-page.component.scss
+++ b/packages/public-client/src/app/components/pages/_parts/site-page/site-page.component.scss
@@ -6,6 +6,13 @@
   flex-direction: column;
   min-height: 100vh;
 
+  app-site-header {
+    display: block;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+  }
+
   main {
     flex: 1;
   }
