--- a/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.scss
+++ b/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.scss
@@ -16,9 +16,25 @@ $verticalGap: 0.75rem;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding: 0.5vw 0;
   background-color: utility.$dive-gray-dk3;
 
-  font-size: 1.25vw;
+  font-size: 2.5vw;
+  @include utility.media-breakpoint-gte(md) {
+    font-size: 2vw;
+  }
+  @include utility.media-breakpoint-gte(lg) {
+    font-size: 1.75vw;
+  }
+  @include utility.media-breakpoint-gte(xl) {
+    font-size: 1.5vw;
+  }
+  @include utility.media-breakpoint-gte(ws) {
+    font-size: 1.25vw;
+  }
+  @include utility.media-breakpoint-gte(hd) {
+    font-size: 1vw;
+  }
   background-color: $headerColor; //rgba(0,0,0,0.75);
   color: utility.$dive-white;
   font-family: 'Righteous', cursive;
@@ -30,16 +46,20 @@ $verticalGap: 0.75rem;
     }
     justify-content: center;
     gap: 1vw;
-    padding: 0.25vw 0;
+    padding: 0;
     margin: 0;
     list-style-type: none;
 
     li {
-      padding: 0.5vw 1vw;
-
       a {
+        padding: 0.5vw 1vw;
+        &::after {
+          content: none;
+        }
         &.current-page {
-          color: utility.$dive-gray-md;
+          color: utility.$dive-white;
+          background-color: utility.$dive-red;
+          text-shadow: 1px 1px 2px #000;
         }
       }
     }
