--- a/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.scss
+++ b/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.scss
@@ -16,7 +16,7 @@ $verticalGap: 0.75rem;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0.5vw 0;
+  //padding: 0.5vw 0;
   background-color: utility.$dive-gray-dk3;
 
   font-size: 2.5vw;
@@ -51,16 +51,24 @@ $verticalGap: 0.75rem;
     list-style-type: none;
 
     li {
+      position: relative;
+      padding: 0.5vw 1vw;
+      .selected-bg {
+        position: absolute;
+        top: 0; bottom: 0; left: 0; right: 0;
+        background: red;
+      }
       a {
-        padding: 0.5vw 1vw;
+        position: relative;        
         &::after {
           content: none;
         }
-        &.current-page {
-          color: utility.$dive-white;
-          background-color: utility.$dive-red;
-          text-shadow: 1px 1px 2px #000;
-        }
+
+        // &.current-page {
+        //   color: utility.$dive-white;
+        //   background-color: utility.$dive-red;
+        //   text-shadow: 1px 1px 2px #000;
+        // }
       }
     }
   }
