--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <span id="pageTop"></span>
-<app-site-header></app-site-header>
+<!-- <app-site-header></app-site-header> -->
 
-<main>
+<div class="main">
   <!-- Landing title card with callouts -->
   <div class="page-title-section">
     <div class="title-callout">
@@ -138,9 +138,9 @@
     <ng-container *ngTemplateOutlet="AnchorSvg"></ng-container>
   </div>
 
-</main>
+</div>
 
-<app-site-footer [address]="footerAddress[0]" [phone]="footerPhone"></app-site-footer>
+<!-- <app-site-footer [address]="footerAddress[0]" [phone]="footerPhone"></app-site-footer> -->
 
 <!------------------------------------- SVGs ---------------------------------------->
 
