--- a/packages/public-client/src/app/components/pages/inside/inside.component.html
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.html
@@ -1,4 +1,4 @@
-<app-site-page>
+<!-- <app-site-page> -->
   <div class="text-content">
     <h1 id="construction">We're still <span>building</span>...</h1>
     <p class="subtitle">...10 years wasn't quite long enough.</p>
@@ -31,4 +31,4 @@
       <p>Taste some of Denver's best fried chicken at our friends nextdoor!</p>
     </a>
   </div>
-</app-site-page>
+<!-- </app-site-page> -->
