--- a/packages/public-client/src/app/app.component.html
+++ b/packages/public-client/src/app/app.component.html
@@ -1,6 +1,11 @@
+<app-site-header></app-site-header>
 
-<!-- <header>header</header> -->
-<!-- <main> -->
-  <router-outlet></router-outlet>
-<!-- </main> -->
-<!-- <footer>footer</footer> -->
+<main 
+  [@routeAnimationTrigger]="animateRouteTransition(outlet)" 
+  (@routeAnimationTrigger.start)="routeAnimationStart($event)"
+  (@routeAnimationTrigger.done)="routeAnimationDone($event)"
+>
+  <router-outlet #outlet="outlet"></router-outlet>
+</main>
+
+<app-site-footer [@footerAnimationTrigger]="footerAnimationTag" (@footerAnimationTrigger.done)="footerAnimationDone($event)"></app-site-footer>
