--- a/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.html
+++ b/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.html
@@ -2,13 +2,12 @@
 <ul>
   <li *ngFor="let link of navItems; trackBy:navTrackBy">
     <div class="selected-bg" [@fillVerticalTransition]="link.filledState ? 'filled' : 'unfilled'"></div>
-    <a (click)="selectPage(link)" [routerLink]="link.url">{{ link.title }}</a>
+    <a (click)="selectPage(link)" [routerLink]="link.url" routerLinkActive="active">{{ link.title }}</a>
   </li>
 </ul>
 
 <!-- <img src="assets/images/ship_wheel.svg" /> -->
 <!-- <ng-container *ngTemplateOutlet="ShipWheelSvg"></ng-container> -->
-
 
 <ng-template #ShipWheelSvg>
   <svg width="100%" height="100%" viewBox="0 0 1613 1666" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
