--- a/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.scss
+++ b/packages/public-client/src/app/components/pages/_parts/site-nav/site-nav.component.scss
@@ -45,7 +45,7 @@ $verticalGap: 0.75rem;
       display: flex;
     }
     justify-content: center;
-    gap: 1vw;
+    gap: 0vw;
     padding: 0;
     margin: 0;
     list-style-type: none;
@@ -53,22 +53,22 @@ $verticalGap: 0.75rem;
     li {
       position: relative;
       padding: 0.5vw 1vw;
+      overflow: hidden;
       .selected-bg {
         position: absolute;
         top: 0; bottom: 0; left: 0; right: 0;
-        background: red;
+        background: utility.$dive-red;
       }
       a {
         position: relative;        
+        transition: all 0.5s ease;
+        color: utility.$dive-yellow;
         &::after {
           content: none;
         }
-
-        // &.current-page {
-        //   color: utility.$dive-white;
-        //   background-color: utility.$dive-red;
-        //   text-shadow: 1px 1px 2px #000;
-        // }
+        &.active {
+          color: utility.$dive-white;
+        }
       }
     }
   }
