--- a/packages/public-client/src/app/components/pages/_parts/site-page/site-page.component.scss
+++ b/packages/public-client/src/app/components/pages/_parts/site-page/site-page.component.scss
@@ -4,7 +4,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  // min-height: 100vh;
 
   app-site-header {
     display: block;
