--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -18,7 +18,7 @@ $verticalGap: 0.75rem;
   // end header
   $mainBackgroundHeight: 50vw;
 
-  main {
+  .main {
     //position: relative;
     flex: 1;
 
