--- a/packages/public-client/src/app/app.component.scss
+++ b/packages/public-client/src/app/app.component.scss
@@ -1,15 +1,19 @@
 @use './components/scss/utility';
 
 :host {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    header {
-      background-color: utility.$dive-red;
-    }
-    main {
-        flex: 1;
-    }
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  header {
+    background-color: utility.$dive-red;
+  }
+
+  main {
+    flex: 1;
+  }
+
   footer {
     background-color: utility.$dive-red;
   }
