--- a/packages/public-client/src/app/components/pages/_parts/site-header/site-header.component.scss
+++ b/packages/public-client/src/app/components/pages/_parts/site-header/site-header.component.scss
@@ -5,13 +5,15 @@ $headerColor: utility.$dive-gray-dk3;
 $verticalGap: 0.75rem;
 
 :host {
+  z-index: 10;
+  position: sticky;
+  top: 0;
+
   header {
-    // z-index: 4;
-    // position: sticky;
     top: 0;
     left: 0rem;
     width: 100%;
-    box-shadow: 0px 4px 4px utility.$dive-black;
+    box-shadow: 0px 2px 4px utility.$dive-black;
 
     .logo-container {
       position: absolute;
