--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.scss
@@ -18,7 +18,7 @@
       background-size: var(--bgSize);
       background-position: var(--bgPosition);
       transform: scale(1.15) translateZ(100px);
-      transition: all 0.1s linear;
+      transition: transform 0.1s linear;
     }
     .mouse-facer-shadow {
       position: absolute;
