menu and findus
Co-authored-by: Mike <mvondrak@gmail.com>

--- a/packages/public-client/src/app/components/pages/inside/inside.component.html
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.html
@@ -18,7 +18,7 @@
       <img src="assets/images/facebook_logo.png" />
     </a>
   </div>
-  <div class="flyers">
+  <!-- <div class="flyers">
     <img id="specials" class="specials" src="assets/images/specials/Taki Takos TNT $8.50.jpg" />
     <a href="https://takitakos.com/" target="_blank"><img id="menu" class="menu" src="assets/images/menu/Dive_Inn_Menu.jpg" /></a>
   </div>
@@ -30,5 +30,5 @@
       </div>
       <p>Taste some of Denver's best fried chicken at our friends nextdoor!</p>
     </a>
-  </div>
+  </div> -->
 </app-site-page>
