--- a/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.html
+++ b/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.html
@@ -10,6 +10,6 @@
 >
   <div class="text-content">
     <h2 [attr.card-title]="title">{{ title }}</h2>
-    <p>{{ description }}</p>
+    <p [innerHTML]="description"></p>
   </div>
 </div>
