menu and findus

--- a/packages/public-client/src/app/components/pages/find-us/find-us.component.html
+++ b/packages/public-client/src/app/components/pages/find-us/find-us.component.html
@@ -1,7 +1,14 @@
 <app-site-page>
   <app-mouse-facer-card 
     title="Find Us" 
-    description="<ul><li>1380 South Broadway<br>at Arkansas Ave</li><li>West off I-25 exits<br>Broadway or Emerson</li><li>One block south<br>of Lousianna Ave</li><li>39.69146843042679, -104.98709686471264</li>"
+    description="
+      <ul class='compass'>
+        <li>1380 South Broadway<br>at Arkansas Ave</li>
+        <li>West off I-25 exits<br>Broadway or Emerson</li>
+        <li>One block south<br>of Lousianna Ave</li>
+        <li>Lat: 39.69146843042679, Lng: -104.98709686471264</li>
+      </ul>
+    "
     imgUrl="url(assets/images/home/Dive_On_Inn_Tom_Boyer.jpg)">
   </app-mouse-facer-card>
   <p>TODO: phone number - <a href="tel:7202426157">720-242-6157</a></p>
