--- a/packages/public-client/src/app/components/pages/find-us/find-us.component.scss
+++ b/packages/public-client/src/app/components/pages/find-us/find-us.component.scss
@@ -2,12 +2,18 @@
 @use '../../scss/utility';
 
 :host {
-  ::ng-deep {
-    ul {
-      li {
-        font-size: 1.5vw;
-        margin-bottom: 1vw;
-        text-align: left;
+  app-mouse-facer-card {
+    ::ng-deep {
+      ul {
+        li {
+          font-size: 1.5vw;
+          margin-bottom: 1vw;
+          text-align: left;
+          
+          a {
+            line-height: 2;
+          }
+        }
       }
     }
   }
