--- a/packages/public-client/src/app/components/pages/menu/menu.component.html
+++ b/packages/public-client/src/app/components/pages/menu/menu.component.html
@@ -2,20 +2,21 @@
   <!-- <h1>Food Menu & Drink Specials</h1> -->
   <div class="taki-tacos">
     <app-mouse-facer-title-card [titleLines]="titleLines" imgUrl="url(assets/images/menu/tacos_stock_img.jpg)"
-    [height]="'40vw'"
-    [bgPosition]="bgPosition"
-    [bgSize]="bgSize"
-  >
-  </app-mouse-facer-title-card>
-    <div class="flyers">
-      <img id="specials" class="specials" src="assets/images/specials/Taki Takos TNT $8.50.jpg" />
-      <a href="https://takitakos.com/" target="_blank"><img id="menu" class="menu"
-          src="assets/images/menu/Dive_Inn_Menu.jpg" /></a>
-    </div>
+      [height]="'40vw'"
+      [bgPosition]="bgPosition"
+      [bgSize]="bgSize"
+    >
+    </app-mouse-facer-title-card>
+    <div class="gradient-overlay"></div>
+    <img src="assets/images/Taki Takos Logo Transparent.png" />
   </div>
-
-
   <div class="cluck-container">
+    <app-mouse-facer-title-card [titleLines]="titleLines" imgUrl="url(assets/images/menu/chicken.jpg)"
+      [height]="'40vw'"
+      [bgPosition]="bgPosition"
+      [bgSize]="bgSize"
+    >
+    </app-mouse-facer-title-card>
     <a class="cluck" href="http://cluckchickenden.com/" target="_blank">
       <img id="cluck" src="assets/images/Cluck_Chicken.svg" />
       <div>
@@ -24,4 +25,11 @@
       <p>Taste some of Denver's best fried chicken at our friends next door!</p>
     </a>
   </div>
+  
+  <div class="flyers">
+    <img id="specials" class="specials" src="assets/images/specials/Taki Takos TNT $8.50.jpg" />
+    <a href="https://takitakos.com/" target="_blank"><img id="menu" class="menu"
+        src="assets/images/menu/Dive_Inn_Menu.jpg" /></a>
+  </div>
+
 </app-site-page>
