--- a/packages/public-client/src/app/components/pages/menu/menu.component.html
+++ b/packages/public-client/src/app/components/pages/menu/menu.component.html
@@ -8,7 +8,8 @@
     >
     </app-mouse-facer-title-card>
     <div class="gradient-overlay"></div>
-    <img src="assets/images/Taki Takos Logo Transparent.png" />
+    <img class="logo" src="assets/images/Taki Takos Logo Transparent.png" />
+    <img class="specials" src="assets/images/specials/Taki Takos TNT $8.50.jpg" />
   </div>
   <div class="cluck-container">
     <app-mouse-facer-title-card [titleLines]="titleLines" imgUrl="url(assets/images/menu/chicken.jpg)"
@@ -17,17 +18,19 @@
       [bgSize]="bgSize"
     >
     </app-mouse-facer-title-card>
-    <a class="cluck" href="http://cluckchickenden.com/" target="_blank">
-      <img id="cluck" src="assets/images/Cluck_Chicken.svg" />
-      <div>
-        <h2>Cluck Chicken</h2>
-      </div>
-      <p>Taste some of Denver's best fried chicken at our friends next door!</p>
-    </a>
+    <div class="cluck">
+      <a href="http://cluckchickenden.com/" target="_blank">
+        <img id="cluck" src="assets/images/Cluck_Chicken_Shadow.svg" />
+        <div>
+          <h2>Cluck Chicken</h2>
+        </div>
+        <p>Taste some of Denver's best fried chicken at our friends next door!</p>
+      </a>
+    </div>
   </div>
   
   <div class="flyers">
-    <img id="specials" class="specials" src="assets/images/specials/Taki Takos TNT $8.50.jpg" />
+    <!-- <img id="specials" class="specials" src="assets/images/specials/Taki Takos TNT $8.50.jpg" /> -->
     <a href="https://takitakos.com/" target="_blank"><img id="menu" class="menu"
         src="assets/images/menu/Dive_Inn_Menu.jpg" /></a>
   </div>
