notes and mobile style
Co-authored-by: Mike <mvondrak@gmail.com>

--- a/packages/public-client/src/app/components/pages/_parts/site-header/site-header.component.scss
+++ b/packages/public-client/src/app/components/pages/_parts/site-header/site-header.component.scss
@@ -6,8 +6,12 @@ $verticalGap: 0.75rem;
 
 :host {
   z-index: 10;
-  position: sticky;
+  position: relative;
   top: 0;
+
+  @include utility.media-breakpoint-gte(sm) {
+    position: sticky;
+  }
 
   header {
     top: 0;
