--- a/packages/public-client/src/app/components/shared/mouse-facer-title-card/mouse-facer-title-card.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer-title-card/mouse-facer-title-card.component.scss
@@ -38,7 +38,7 @@ $overrideStroke: 0.7vw;
   
     h1.title {
       z-index: 0;
-      display: none; // don't display title until >= 840px screen width
+      //display: none; // don't display title until >= 840px screen width
       position: relative;
       top: -7vw;
       left: -4vw;
